--- a/src/main/java/com/creatingskies/game/config/company/PlayerDialog.fxml
+++ b/src/main/java/com/creatingskies/game/config/company/PlayerDialog.fxml
@@ -6,26 +6,36 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="104.0" prefWidth="429.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.company.PlayerDialogController">
-	<children>
-				<ButtonBar layoutX="86.0" layoutY="74.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
-					<buttons>
-						<Button mnemonicParsing="false" onAction="#handleSave" styleClass="button-success" text="Save" />
-						<Button mnemonicParsing="false" onAction="#handleCancel" styleClass="button-default" text="Cancel" />
-					</buttons>
-				</ButtonBar>
-      <GridPane layoutX="27.0" layoutY="-26.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="110.0" prefWidth="110.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+<AnchorPane prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.company.PlayerDialogController">
+   <children>
+      <VBox layoutX="20.0" layoutY="14.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <Label text="Player Name" />
-            <TextField fx:id="playerNameField" GridPane.columnIndex="1" />
+            <GridPane vgap="10.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Name" />
+                  <TextField fx:id="playerNameField" GridPane.columnIndex="1" />
+                  <Label text="Current Team" GridPane.rowIndex="1" />
+                  <Label fx:id="currentTeam" text="current tea," GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <Label text="Move to" GridPane.rowIndex="2" />
+                  <ComboBox fx:id="teamComboBox" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+            <HBox alignment="CENTER_RIGHT" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <Button minWidth="100.0" mnemonicParsing="false" onAction="#handleSave" text="Ok" />
+                  <Button minWidth="100.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
+               </children>
+            </HBox>
          </children>
-      </GridPane>
-	</children>
+      </VBox>
+   </children>
 </AnchorPane>
