--- a/src/main/java/com/creatingskies/game/config/company/TeamDialog.fxml
+++ b/src/main/java/com/creatingskies/game/config/company/TeamDialog.fxml
@@ -6,26 +6,47 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="104.0" prefWidth="429.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.company.TeamDialogController">
-	<children>
-				<ButtonBar layoutX="86.0" layoutY="74.0" prefHeight="40.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
-					<buttons>
-						<Button mnemonicParsing="false" onAction="#handleSave" styleClass="button-success" text="Save" />
-						<Button mnemonicParsing="false" onAction="#handleCancel" styleClass="button-default" text="Cancel" />
-					</buttons>
-				</ButtonBar>
-      <GridPane layoutX="27.0" layoutY="-26.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="110.0" minWidth="110.0" prefWidth="110.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.creatingskies.game.config.company.TeamDialogController">
+   <children>
+      <VBox layoutY="10.0" prefHeight="200.0" prefWidth="100.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <Label text="Team Name" />
-            <TextField fx:id="teamNameField" GridPane.columnIndex="1" />
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Name" />
+                  <TextField fx:id="teamNameField" GridPane.columnIndex="1" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </GridPane>
+            <GridPane>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label text="Players" />
+                  <Button minWidth="100.0" mnemonicParsing="false" onAction="#addPlayer" text="Add" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
+            <VBox fx:id="playersContainer" minHeight="300.0" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #ffffff;" />
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <Button minWidth="100.0" mnemonicParsing="false" onAction="#handleSave" text="Ok" />
+                  <Button minWidth="100.0" mnemonicParsing="false" onAction="#handleCancel" text="Cancel" />
+               </children>
+            </HBox>
          </children>
-      </GridPane>
-	</children>
+      </VBox>
+   </children>
 </AnchorPane>
