--- a/src/main/java/com/creatingskies/game/startup/MainLayout.fxml
+++ b/src/main/java/com/creatingskies/game/startup/MainLayout.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
 
-<BorderPane maxHeight="400.0" maxWidth="800.0" minHeight="400.0" minWidth="800.0" prefHeight="400.0" prefWidth="800.0" styleClass="background" stylesheets="/css/style.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" styleClass="background" stylesheets="/css/style.css" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <GridPane maxHeight="50.0" minHeight="100.0" prefHeight="50.0" BorderPane.alignment="CENTER">
         <columnConstraints>
