--- a/src/main/java/com/creatingskies/game/config/company/Company.fxml
+++ b/src/main/java/com/creatingskies/game/config/company/Company.fxml
@@ -10,15 +10,20 @@
    <children>
       <HBox layoutX="413.0" layoutY="200.0" prefHeight="100.0" prefWidth="200.0" spacing="10.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
-            <TableView fx:id="companyTableView" minWidth="400.0" prefHeight="200.0" prefWidth="400.0">
-              <columns>
-                <TableColumn fx:id="companyNameTableColumn" prefWidth="75.0" text="Name" />
-                <TableColumn fx:id="companyActionTableColumn" editable="false" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" sortable="false" />
-              </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
+            <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+               <children>
+                  <Button mnemonicParsing="false" onAction="#handleAdd" text="Add Company" />
+                  <TableView fx:id="companyTableView" minWidth="400.0" prefHeight="490.0" prefWidth="400.0">
+                    <columns>
+                      <TableColumn fx:id="companyNameTableColumn" prefWidth="75.0" text="Name" />
+                      <TableColumn fx:id="companyActionTableColumn" editable="false" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" sortable="false" />
+                    </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
+                  </TableView>
+               </children>
+            </VBox>
             <ScrollPane fitToHeight="true" fitToWidth="true" HBox.hgrow="ALWAYS">
                <content>
                   <AnchorPane>
