--- a/src/main/java/com/creatingskies/game/config/event/GameEvent.fxml
+++ b/src/main/java/com/creatingskies/game/config/event/GameEvent.fxml
@@ -30,11 +30,10 @@
       </GridPane>
       <TableView fx:id="eventsTable" layoutX="148.0" layoutY="100.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="60.0">
         <columns>
-          <TableColumn fx:id="groupTableColumn" prefWidth="75.0" text="Group" />
-            <TableColumn fx:id="companyTableColumn" prefWidth="75.0" text="Company" />
-            <TableColumn fx:id="gameTableColumn" prefWidth="75.0" text="Game" />
-          <TableColumn fx:id="dateTableColumn" prefWidth="75.0" text="Date" />
-            <TableColumn fx:id="actionTableColumn" editable="false" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" sortable="false" />
+            <TableColumn fx:id="gameTableColumn" minWidth="150.0" prefWidth="100.0" text="Game" />
+            <TableColumn fx:id="companyTableColumn" minWidth="150.0" prefWidth="100.0" text="Company" />
+          <TableColumn fx:id="dateTableColumn" maxWidth="200.0" minWidth="200.0" prefWidth="200.0" text="Date" />
+            <TableColumn fx:id="actionTableColumn" editable="false" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" resizable="false" sortable="false" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
