--- a/src/main/java/com/creatingskies/game/core/GameCore.fxml
+++ b/src/main/java/com/creatingskies/game/core/GameCore.fxml
@@ -60,6 +60,7 @@
                      </font>
                   </Label>
                   <ImageView fx:id="stopImageView" fitHeight="100.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+                  <Pane fx:id="test" prefHeight="200.0" prefWidth="200.0" />
 					</children>
 					<padding>
 						<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
