--- a/src/main/java/com/creatingskies/game/editor/Game.fxml
+++ b/src/main/java/com/creatingskies/game/editor/Game.fxml
@@ -13,7 +13,7 @@
           <TableColumn fx:id="descriptionColumn" prefWidth="75.0" text="Description" />
             <TableColumn fx:id="typeColumn" prefWidth="75.0" text="Type" />
             <TableColumn fx:id="mapColumn" prefWidth="75.0" text="Map" />
-            <TableColumn fx:id="actionColumn" editable="false" prefWidth="75.0" sortable="false" />
+            <TableColumn fx:id="actionColumn" editable="false" maxWidth="120.0" minWidth="120.0" prefWidth="120.0" sortable="false" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
