--- a/src/main/java/com/creatingskies/game/core/GameCore.fxml
+++ b/src/main/java/com/creatingskies/game/core/GameCore.fxml
@@ -15,34 +15,33 @@
             <AnchorPane prefHeight="200.0" prefWidth="200.0">
                <children>
 						<Button layoutX="10.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleGameStart" prefHeight="46.0" prefWidth="180.0" text="START" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" />
-                  <GridPane layoutX="16.0" layoutY="174.0" prefHeight="60.0" prefWidth="160.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                  <GridPane layoutX="16.0" layoutY="174.0" prefHeight="103.0" prefWidth="180.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.0" minWidth="10.0" prefWidth="94.0" />
-                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="66.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="122.0" />
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="58.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Slow Factor" GridPane.rowIndex="1">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
-                        <Label text="Duration">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Label>
+                        <Label text="Obstalce Slow Factor" GridPane.rowIndex="1" />
+                        <Label text="Duration" />
       								<Label fx:id="durationLabel" text="0.0" GridPane.columnIndex="1">
       									<font>
-      										<Font size="24.0" />
+      										<Font size="18.0" />
       									</font>
       								</Label>
-                        <Label fx:id="difficultyLabel" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <Label fx:id="obstacleSlowLabel" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <font>
-                              <Font size="24.0" />
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <Label text="Tile Slow Factor" GridPane.rowIndex="2" />
+                        <Label fx:id="tileSlowLabel" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="18.0" />
                            </font>
                         </Label>
                      </children>
