--- a/src/main/java/com/creatingskies/game/config/event/GameEventProperties.fxml
+++ b/src/main/java/com/creatingskies/game/config/event/GameEventProperties.fxml
@@ -25,7 +25,27 @@
             <HBox alignment="CENTER_LEFT" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" prefWidth="200.0" spacing="10.0">
                <children>
                   <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Date" />
-                  <DatePicker fx:id="eventDatePicker" prefHeight="25.0" prefWidth="349.0" />
+                  <DatePicker fx:id="eventDatePicker" prefHeight="25.0" prefWidth="350.0" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" maxHeight="50.0" minHeight="50.0" prefHeight="50.0" prefWidth="200.0" spacing="10.0">
+               <children>
+                  <Label maxWidth="100.0" minWidth="100.0" prefWidth="100.0" text="Time" />
+                  <GridPane hgap="10.0" maxWidth="350.0" minWidth="350.0" prefWidth="350.0" HBox.hgrow="ALWAYS">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="70.0" prefWidth="70.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <ChoiceBox fx:id="hourChoiceBox" prefWidth="150.0" />
+                        <ChoiceBox fx:id="minuteChoiceBox" prefWidth="150.0" GridPane.columnIndex="1" />
+                        <ChoiceBox fx:id="periodChoiceBox" prefWidth="150.0" GridPane.columnIndex="2" />
+                     </children>
+                  </GridPane>
                </children>
             </HBox>
             <GridPane>
