--- a/src/main/java/com/creatingskies/game/core/GameCore.fxml
+++ b/src/main/java/com/creatingskies/game/core/GameCore.fxml
@@ -12,13 +12,12 @@
 	<children>
 		<HBox layoutY="82.0" prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
 			<children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0">
+            <AnchorPane prefHeight="590.0" prefWidth="273.0">
                <children>
-						<Button layoutX="10.0" layoutY="529.0" mnemonicParsing="false" onAction="#handleGameStart" prefHeight="46.0" prefWidth="180.0" text="START" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="50.0" />
-                  <GridPane layoutX="16.0" layoutY="174.0" prefHeight="103.0" prefWidth="180.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
+                  <GridPane layoutX="16.0" layoutY="174.0" prefHeight="101.0" prefWidth="253.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="122.0" minWidth="10.0" prefWidth="122.0" />
-                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="58.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="119.0" minWidth="10.0" prefWidth="94.0" />
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="66.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -26,45 +25,61 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <Label text="Obstalce Slow Factor" GridPane.rowIndex="1" />
-                        <Label text="Duration" />
+                        <Label text="Obstacle Slow Factor" GridPane.rowIndex="1">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <Label text="Duration">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
       								<Label fx:id="durationLabel" text="0.0" GridPane.columnIndex="1">
       									<font>
-      										<Font size="18.0" />
+      										<Font size="24.0" />
       									</font>
       								</Label>
                         <Label fx:id="obstacleSlowLabel" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                            <font>
-                              <Font size="18.0" />
+                              <Font size="24.0" />
                            </font>
                         </Label>
-                        <Label text="Tile Slow Factor" GridPane.rowIndex="2" />
                         <Label fx:id="tileSlowLabel" text="0.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                            <font>
-                              <Font size="18.0" />
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <Label text="Tile Slow Factor" GridPane.rowIndex="2">
+                           <font>
+                              <Font size="14.0" />
                            </font>
                         </Label>
                      </children>
                   </GridPane>
-                  <Label fx:id="countDownLabel" layoutX="56.0" layoutY="403.0" text="Game starts in">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-      				<Label fx:id="countDownValue" layoutX="90.0" layoutY="416.0" text="3">
-      					<font>
-      						<Font size="36.0" />
-      					</font>
-      				</Label>
+                  <Pane fx:id="miniMapPane" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0">
+                     <children>
+                        <GridPane fx:id="miniMapTiles" maxHeight="200.0" maxWidth="200.0" minHeight="200.0" minWidth="200.0" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </Pane>
                </children>
             </AnchorPane>
-            <Pane fx:id="pane">
-               <children>
-                  <ImageView fx:id="stopImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
-                  <ImageView fx:id="warningImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
-                  <GridPane fx:id="mapTiles" />
-               </children>
-            </Pane>
+            <ScrollPane fx:id="mapScroller" hbarPolicy="NEVER" prefHeight="200.0" prefWidth="200.0" vbarPolicy="NEVER" HBox.hgrow="ALWAYS">
+               <content>
+                  <Pane fx:id="pane">
+                     <children>
+                        <ImageView fx:id="stopImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+                        <ImageView fx:id="warningImageView" fitHeight="150.0" fitWidth="150.0" pickOnBounds="true" preserveRatio="true" visible="false" />
+                        <GridPane fx:id="mapTiles" />
+            				<Label fx:id="countDownValue" style="-fx-font-weight: bold;" text="3">
+            					<font>
+            						<Font size="96.0" />
+            					</font>
+            				</Label>
+                     </children>
+                  </Pane>
+               </content>
+            </ScrollPane>
 			</children>
 		</HBox>
 	</children>
